# DataClients

./: pyproject.toml  requirements.txt
src/config/: bank_of_england.yaml
src/data_clients/: __init__.py  _base.py  bank_of_england.py  reddit  vanguard.py
src/data_clients/config/: vanguard.yaml
src/data_clients/vanguard/: __init__.py  utils.py
