[build-system]
requires = ["setuptools", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "Data-Clients"
dynamic = ["dependencies","version"]
requires-python = ">=3.12.3,<=3.12.9"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]
version_file = "src/data_clients/_version.py"
